<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="40dp"
    android:textAlignment="textEnd"
    android:id="@+id/linearLayout"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signUpTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/firstNameTextField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/firstNameTextField"
        android:inputType="textEmailAddress"
        android:background="@drawable/border_radius_text_field"
        android:padding="20dp"
        />
    <EditText
        android:id="@+id/lastNameTextField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/lastNameTextField"
        android:inputType="textEmailAddress"
        android:background="@drawable/border_radius_text_field"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/emailTextField"
        android:inputType="textEmailAddress"
        android:background="@drawable/border_radius_text_field"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/passwordTextField"
        android:inputType="textPassword"
        android:background="@drawable/border_radius_text_field"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/rePasswordTextField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/repaetPassword"
        android:inputType="textPassword"
        android:background="@drawable/border_radius_text_field"
        android:padding="20dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/buttonSignUp"
        android:textSize="20sp"
        android:background="@drawable/border_radius_button"
        android:onClick="onTapRegister"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alreadyHave"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonLogin"
            android:textColor="@color/blue"
            android:onClick="onTapLogin"
            android:clickable="true"
            />
    </LinearLayout>

</LinearLayout>