<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="40dp"
    android:scrollbarStyle="outsideInset"
    android:textAlignment="textEnd"
    android:id="@+id/linearLayout"
    >


    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/login_foreground" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/border_radius_text_field"
        android:ems="10"
        android:hint="@string/emailTextField"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:padding="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp" />

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_radius_text_field"
        android:ems="10"
        android:hint="@string/passwordTextField"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:padding="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_radius_button"
        android:backgroundTint="@color/blue"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:text="@string/buttonLogin"
        android:onClick="onTapLogin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSignUp"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:onClick="onTapRegister"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textButtonForgotPass"
            android:textAlignment="textEnd"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
